# bin2src

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-GENERATED  README.md  TODO.md
.github/: CODEOWNERS
examples/: README.md
examples/c/: README.md  example.c  smbmp.h
examples/cshell/gas/: example.S  example.c  example_final.c
examples/cshell/nasm/: example.asm  example.c  example_final.c
examples/linux/: README.md
examples/pascal/: README.md  example.pas
examples/python/: README.md  example.py  smimgpng.py
examples/rust/: README.md
examples/rust/src/: main.rs
examples/windows/: README.md
examples/windows/c/: README.md  smbmp.h
examples/windows/cshell/: README.md
examples/windows/cshell/gas/: example_final.c
examples/windows/pascal/: README.md
examples/windows/python/: README.md  example.py
examples/windows/rust/: Cargo.toml  README.md  build.rs  libbz2.lib  lorem.txt.bz2
examples/windows/rust/src/: main.rs
src/: lang.rs  main.rs
src/lang/: c.rs  cshell.rs  pascal.rs  python.rs  rust.rs
